# SimplyTerm

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  plugin-registry.json  sonar-project.properties  tailwind.config.js  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build-windows.yml  build.yml  qodana_code_quality.yml
docs/: PLUGIN_API_REFERENCE.md  PLUGIN_DEVELOPMENT.md  PLUGIN_EXAMPLES.md  README.md  THEMES.md  index.html
landing/: index.html
scripts/: bump-version.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: edit_watcher.rs  lib.rs  main.rs
src-tauri/src/connectors/: known_hosts.rs  local.rs  mod.rs  serial.rs  sftp.rs  ssh.rs  ssh_exec.rs  telnet.rs
src-tauri/src/plugins/: api.rs  error.rs  manager.rs  manifest.rs  mod.rs  permissions.rs  registry.rs  sandbox.rs
src-tauri/src/plugins/api_v1/: events.rs  mod.rs  session_metadata.rs  sessions.rs  settings.rs  shell.rs  storage.rs  vault.rs
src-tauri/src/session/: manager.rs  mod.rs  traits.rs
src-tauri/src/storage/: config.rs  credentials.rs  folders.rs  mod.rs  recent.rs  sessions.rs  settings.rs
src-tauri/src/storage/vault/: commands.rs  crypto.rs  fido2.rs  fido2_windows.rs  mod.rs  state.rs  types.rs
src-tauri/src/tunnels/: dynamic_forward.rs  local_forward.rs  manager.rs  mod.rs  remote_forward.rs
src/components/: BastionManager.tsx  ConnectionForm.tsx  ConnectionTypeSelector.tsx  DebugStats.tsx  DynamicLucideIcon.tsx  EmptyPaneSessions.tsx  EmptyState.tsx  FloatingTabs.tsx  FormField.tsx  HeaderBar.tsx  HostKeyModal.tsx  InstallConfirmationModal.tsx  LocalFileBrowser.tsx  Modal.tsx  NewConnectionModal.tsx  PanePicker.tsx  PassphrasePromptModal.tsx  PermissionApprovalModal.tsx  PluginModal.tsx  PromptModal.tsx  SerialConnectionForm.tsx  SessionContextMenu.tsx  SettingsModal.tsx  SftpBrowser.tsx  Sidebar.tsx  SplitHandle.tsx  SplitPane.tsx  SshKeyManager.tsx  TelnetConnectionForm.tsx  Terminal.tsx  TerminalPane.tsx  TunnelManager.tsx  TunnelSidebar.tsx  WorkspaceSplit.tsx
src/components/CommandPalette/: CommandItem.tsx  CommandPalette.tsx  commands.ts  index.ts  types.ts  useCommandPalette.ts
src/components/Connection/: SerialConnectionForm.tsx  SshConnectionForm.tsx  TelnetConnectionForm.tsx
src/components/PaneGroup/: PaneGroup.tsx  PaneGroupContent.tsx  PaneGroupTabBar.tsx  WorkspaceActionsContext.tsx  index.ts
src/components/Settings/: AboutSettings.tsx  AppearanceSettings.tsx  AuthenticationSection.tsx  BrowsePluginsTab.tsx  ConnectionsSettings.tsx  DeveloperPluginsTab.tsx  HelpSettings.tsx  InlineVaultSetup.tsx  InstalledPluginsTab.tsx  PasswordChangeSection.tsx  PluginCards.tsx  PluginsSettings.tsx  PluginsTab.tsx  SecuritySettings.tsx  SelectiveExportModal.tsx  SelectiveImportModal.tsx  SettingsTab.tsx  SettingsUIComponents.tsx  TerminalSettings.tsx  UnifiedPluginsTab.tsx  VaultManager.tsx  VaultStatusSection.tsx  VaultTreeView.tsx  index.ts
src/components/StatusBar/: StatusBar.tsx  index.ts  types.ts
src/components/UI/: PasswordInput.tsx
src/components/Vault/: PinInput.tsx  VaultSetupModal.tsx  index.ts  (+1 more)
src/hooks/: index.ts  useAppSettings.ts  useAutoHideSuccess.ts  useHostKeyVerification.ts  useRegistry.ts  useSessionDecorators.ts  useSessions.ts  useSshKeys.ts  useTabs.ts  useVault.ts  useVaultFlow.ts  useVaultFolders.ts  useWorkspace.ts
src/i18n/: index.ts
src/plugins/: PluginAPI.ts  PluginHost.tsx  PluginManager.ts  PluginPanel.tsx  PluginSettingsPanel.tsx  PluginSidebarSection.tsx  PluginWidget.tsx  extensionTypes.ts  index.ts  permissionInfo.ts  sanitize.ts  types.ts
src/styles/: global.css
src/themes/: cream.ts  dark.ts  index.ts  light.ts  monokai.ts  types.ts
src/types/: index.ts  settings.ts  vault.ts  workspace.ts
src/utils/: errors.ts  fileIcons.ts  idGenerator.ts  index.ts  pathUtils.ts  platform.ts  validatePassword.ts  vaultConstants.ts  workspaceTree.ts
(+5 files in other folders)
