[package]
name = "simplyterm"
version = "0.6.0"
description = "A modern, fast, cross-platform terminal"
authors = ["SimplyTerm"]
edition = "2021"

[lib]
name = "simplyterm_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Async runtime
tokio = { version = "1", features = ["full"] }

# SSH
russh = "0.46"
russh-keys = "0.46"
russh-sftp = "2.0"

# Pour PTY local
portable-pty = "0.8"

# Utils
async-trait = "0.1"
thiserror = "2"
uuid = { version = "1", features = ["v4"] }
parking_lot = "0.12"
lazy_static = "1.4"

# Storage & Credentials
dirs = "5"
chrono = "0.4"
rand = "0.8"

# Vault encryption
aes-gcm = "0.10"
argon2 = "0.5"
zeroize = { version = "1.8", features = ["derive"] }
base64 = "0.22"
hex = "0.4"
hkdf = "0.12"
sha2 = "0.10"

# FIDO2 security keys
ctap-hid-fido2 = "3.5"

# Zip extraction (plugin registry downloads)
zip = "2"

# External file editing
notify = "6"
open = "5"

# HTTP client (for plugin network requests, bypasses CORS)
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }

# Serial port communication
serialport = "4.3"

# Windows WebAuthn API (no admin required)
[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_Networking_WindowsWebServices",
    "Win32_UI_WindowsAndMessaging",
] }
